# dory-data-collector

./: README.md  pyproject.toml
app/: dependencies.py  main.py
app/core/: config.py
app/models/: base.py  extraction.py  meeting.py  task.py
app/routers/: items.py  meeting.py
app/service/: __init__.py  firestore.py
app/service/firestore/: __init__.py  firestore.py
